<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">we_empower_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_note">Note</string>
  <string name="lbl_gift">Gift</string>
  <string name="msg_care_to_share_more">Care to share more</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_3h_ago">3h ago</string>
  <string name="msg_i_have_a_feeling">I have a feeling these funds will be able to change the life of one of your individuals. </string>
  <string name="lbl_number">Number</string>
  <string name="msg_https_www_fac">https://www.facebook.com/we.empowerfoundation7/</string>
  <string name="lbl_or_sign_up_with">OR SIGN UP WITH</string>
  <string name="msg_leave_your_public">Leave your public comment</string>
  <string name="lbl_27_68_56_56893">+27 68 56-56893</string>
  <string name="lbl_r1500_00">R1500.00</string>
  <string name="msg_mbilwi_secondary">Mbilwi Secondary School.</string>
  <string name="msg_already_have_an">Already have an account?</string>
  <string name="msg_donation_of_pads">DONATION OF PADS</string>
  <string name="msg_2412_7512_3412_3456">2412 7512 3412 3456</string>
  <string name="lbl_proactive">Proactive</string>
  <string name="lbl_34525">34525</string>
  <string name="lbl_friendly">Friendly</string>
  <string name="msg_i_agree_with_terms">I agree with Terms &amp; Conditions</string>
  <string name="lbl_transaction">Transaction</string>
  <string name="lbl_enter_email">Enter email</string>
  <string name="lbl_welcome">Welcome.</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="msg_arnold_ferdinand">Arnold Ferdinand</string>
  <string name="msg_successfully_transferred">Successfully transferred &#127881;</string>
  <string name="lbl_see_all">See all</string>
  <string name="lbl_12_30_21_08_24">12:30 21/08/24</string>
  <string name="lbl_card_number">Card number</string>
  <string name="lbl_time">Time</string>
  <string name="msg_make_another_payment">Make another payment</string>
  <string name="lbl_you_transferred">You transferred</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_proficient">Proficient</string>
  <string name="lbl_back_to_home">Back to home</string>
  <string name="lbl_professional">Professional</string>
  <string name="msg_at_mbilwi_secondary">At Mbilwi Secondary School.</string>
  <string name="lbl_rating">Rating</string>
  <string name="lbl_recipient">Recipient</string>
  <string name="msg_create_an_account">Create an account</string>
  <string name="lbl_submit">Submit</string>
  <string name="lbl_enter_password">Enter password</string>
  <string name="lbl_promotion">Promotion</string>
  <string name="lbl_2h_ago">2h ago</string>
  <string name="lbl_highlights">Highlights</string>
  <string name="lbl_at">At </string>
</resources>
