<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="transferMoneyPaymentSuccessVM" type="com.weempowerapp.app.modules.transfermoneypaymentsuccess.data.viewmodel.TransferMoneyPaymentSuccessVM"/>
    </data>
    <LinearLayout android:id="@+id/linearTransferMoney"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_24pxh"
        android:paddingVertical="@dimen/_24pxv" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowarrowleftone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleftone"
                android:layout_height="@dimen/_24pxh"
                android:layout_marginBottom="@dimen/_103pxv"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="@dimen/_24pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_left_1"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left_1"/>
            <FrameLayout android:id="@+id/frameStackccheckone"
                android:layout_height="@dimen/_154pxv"
                android:layout_marginStart="@dimen/_51pxh" android:layout_width="@dimen/_185pxh">
                <FrameLayout android:id="@+id/frameContainer66"
                    android:layout_gravity="bottom|center"
                    android:layout_height="@dimen/_81pxv"
                    android:layout_width="@dimen/_81pxh"
                    android:paddingHorizontal="@dimen/_19pxh"
                    android:paddingVertical="@dimen/_19pxv" style="@style/groupStylegray_100_01cornerRadius">
                    <ImageView android:id="@+id/imageCcheckoneOne"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_42pxh"
                        android:layout_width="@dimen/_42pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_c_check_1"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_c_check_1"/>
                </FrameLayout>
                <ImageView android:id="@+id/imageWhatsappimage"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_89pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_whatsapp_image_2024_04_14}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_whatsapp_image_2024_04_14"/>
            </FrameLayout>
            <ImageView android:id="@+id/imageSharetwoOne"
                android:layout_height="@dimen/_24pxh"
                android:layout_marginBottom="@dimen/_103pxv"
                android:layout_marginStart="@dimen/_58pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="@dimen/_24pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_share_2"
                tools:ignore="ContentDescription" tools:src="@drawable/img_share_2"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSuccessfully"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtSuccessfully}"
            style="@style/txtLexendregular24" tools:text="@string/msg_successfully_transferred"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearContainer65"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_19pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_20pxv" style="@style/groupStylewhite_A700cornerRadius">
            <LinearLayout android:id="@+id/linearRowrecipient"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRecipient"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtRecipient}"
                    style="@style/txtManroperegular14" tools:text="@string/lbl_recipient"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtElizabeth"
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_120pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtElizabeth}"
                    style="@style/txtLexendregular14" tools:text="@string/msg_arnold_ferdinand"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRownumber"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNumber"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtNumber}"
                    style="@style/txtManroperegular14" tools:text="@string/lbl_number"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt9296170714"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_142pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txt9296170714}"
                    style="@style/txtLexendregular14" tools:text="@string/lbl_27_68_56_56893"/>
            </LinearLayout>
            <View android:background="@color/gray_300"
                android:id="@+id/lineLinethirtyfour"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_300pxh"/>
            <LinearLayout android:id="@+id/linearRowyoutransferr"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYoutransferred"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtYoutransferred}"
                    style="@style/txtManroperegular14" tools:text="@string/lbl_you_transferred"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtR1500zero"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_140pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtR1500zero}"
                    style="@style/txtLexendregular14" tools:text="@string/lbl_r1500_00"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowcardnumber"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCardnumber"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtCardnumber}"
                    style="@style/txtManroperegular14" tools:text="@string/lbl_card_number"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt241275123412"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_82pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txt241275123412}"
                    style="@style/txtLexendregular14" tools:text="@string/msg_2412_7512_3412_3456"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowtransaction"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTransaction"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtTransaction}"
                    style="@style/txtManroperegular14" tools:text="@string/lbl_transaction"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtZipcode"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_185pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtZipcode}"
                    style="@style/txtLexendregular14" tools:text="@string/lbl_34525"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowtime"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtTime}"
                    style="@style/txtManroperegular14" tools:text="@string/lbl_time"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt12302108twentyt"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_169pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txt12302108twentyt}"
                    style="@style/txtLexendregular14" tools:text="@string/lbl_12_30_21_08_24"/>
            </LinearLayout>
            <View android:background="@color/gray_300"
                android:id="@+id/lineLinethirtythree"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_300pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtNote"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtNote}"
                style="@style/txtManroperegular14" tools:text="@string/lbl_note"/>
            <TextView android:id="@+id/txtThanksfor"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:text="@{transferMoneyPaymentSuccessVM.transferMoneyPaymentSuccessModel.txtThanksfor}"
                style="@style/txtManroperegular12" tools:text="@string/msg_i_have_a_feeling"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnBackToHome"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_52pxv"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_width="@dimen/_342pxh"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_back_to_home"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_back_to_home"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnMakeAnother"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_52pxv"
            android:layout_marginBottom="@dimen/_4pxv"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_342pxh"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/msg_make_another_payment"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/msg_make_another_payment"/>
    </LinearLayout>
</layout>
