<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="containerTwoVM" type="com.weempowerapp.app.modules.containertwo.data.viewmodel.ContainerTwoVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnwelcome"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_2">
        <LinearLayout android:id="@+id/linearContainertwo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackwelcome"
                android:layout_gravity="end"
                android:layout_height="@dimen/_106pxv" android:layout_width="@dimen/_355pxh">
                <ImageView android:id="@+id/imageWhatsappimage"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_106pxh"
                    android:layout_width="@dimen/_215pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_whatsapp_image_2024_04_14_106x215}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_whatsapp_image_2024_04_14_106x215"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtWelcome"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{containerTwoVM.containerTwoModel.txtWelcome}"
                    style="@style/txtLexendbold32" tools:text="@string/lbl_welcome"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtCreatean"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:singleLine="true"
                    android:text="@{containerTwoVM.containerTwoModel.txtCreatean}"
                    style="@style/txtLexendregular20" tools:text="@string/msg_create_an_account"/>
            </FrameLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnemail"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{containerTwoVM.containerTwoModel.txtEmail}"
                    style="@style/txtManropebold16" tools:text="@string/lbl_email"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_100_radius_4"
                    android:drawablePadding="@dimen/_8pxh"
                    android:drawableStart="@drawable/img_lock"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_email"
                    android:id="@+id/etEmail" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_10pxv"
                    android:singleLine="true"
                    android:text="@={containerTwoVM.containerTwoModel.etEmailValue}"
                    android:textColorHint="@color/gray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnpassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{containerTwoVM.containerTwoModel.txtPassword}"
                    style="@style/txtManropebold16" tools:text="@string/lbl_password"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_100_radius_4"
                    android:drawableEnd="@drawable/img_hide"
                    android:drawablePadding="@dimen/_30pxh"
                    android:drawableStart="@drawable/img_lock_gray_900"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_password"
                    android:id="@+id/etPassword"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_15pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_10pxv"
                    android:singleLine="true"
                    android:text="@={containerTwoVM.containerTwoModel.etPasswordValue}"
                    android:textColorHint="@color/gray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:ellipsize="end"
                android:fontFamily="@font/manrope"
                android:id="@+id/checkBoxIagreewithterms"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@string/msg_i_agree_with_terms"
                android:textColor="@color/gray_900"
                android:textFontWeight="400"
                android:textSize="@dimen/_14pxh"
                android:textStyle="normal" tools:text="@string/msg_i_agree_with_terms"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_sign_up"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrsignupwith"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@{containerTwoVM.containerTwoModel.txtOrsignupwith}"
                android:textAllCaps="true"
                style="@style/txtManropebold12" tools:text="@string/lbl_or_sign_up_with"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowgoogleone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageGoogleoneOne"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_width="@dimen/_32pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_google_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_google_1"/>
                <ImageView android:id="@+id/imageLogofacebookone"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_width="@dimen/_32pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_logo_facebook_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logo_facebook_1"/>
                <ImageView android:id="@+id/imageAppleoneOne"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_width="@dimen/_32pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_apple_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_apple_1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowconfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_76pxh"
            android:layout_marginStart="@dimen/_76pxh"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:gravity="center_vertical"
                android:id="@+id/txtConfirmation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{containerTwoVM.containerTwoModel.txtConfirmation}"
                style="@style/txtManroperegular14_2" tools:text="@string/msg_already_have_an"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignin"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{containerTwoVM.containerTwoModel.txtSignin}"
                style="@style/txtManropebold14" tools:text="@string/lbl_sign_in"/>
        </LinearLayout>
    </LinearLayout>
</layout>
